tweaks and overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -110,4 +110,5 @@
   div#swipeCardStack[lowSOL="true"] {
       pointer-events: none;
       opacity: 0.5;
+      overflow: hidden;
   }
